--- a/workflow/scripts/seuratCiteSampleQCSummaryReport.Rmd
+++ b/workflow/scripts/seuratCiteSampleQCSummaryReport.Rmd
@@ -17,6 +17,7 @@ params:
   seuratdir: directory
   samples: samples
   cellfilter: cellfilter
+  skipped: ""
 ---
 
 
@@ -47,6 +48,16 @@ plt_pre_adt <- "PreFilter_VlnPlot_ADT.png"
 plt_post_adt <- "PostFilter_VlnPlot_ADT.png"
 plt_pre_hto <- "PreFilter_VlnPlot_HTO.png"
 plt_post_hto <- "PostFilter_VlnPlot_HTO.png"
+plt_pre_mito <- "PreFilter_UMAP_percent.mito.png"
+plt_post_mito <- "PostFilter_UMAP_percent.mito.png"
+plt_pre_rpl <- "PreFilter_UMAP_percent.rpl.png"
+plt_post_rpl <- "PostFilter_UMAP_percent.rpl.png"
+plt_pre_rps <- "PreFilter_UMAP_percent.rps.png"
+plt_post_rps <- "PostFilter_UMAP_percent.rps.png"
+plt_pre_feature_rna <- "PreFilter_UMAP_nFeature_RNA.png" 
+plt_post_feature_rna  <- "PostFilter_UMAP_nFeature_RNA.png"
+plt_pre_count_rna <- "PreFilter_UMAP_nCount_RNA.png"
+plt_post_count_rna <- "PostFilter_UMAP_nCount_RNA.png" 
 
 sil_wildcard <- "SilhouetteResult_res*.csv"
 
@@ -93,8 +104,8 @@ data %>% kable(format='html') %>%
 ## Pre-Filter UMAP
 
 ```{r  echo=F ,results='asis'}
-data <- cbind(sample_list |> gsub(pattern='/', replacement=' - '), lapply(sample_list, function(x) paste0(file.path(maindir, x, plt5) %>% pander::pandoc.image.return(), '{height=512px, width=576px}'))) %>% as.data.frame()
-colnames(data) <- c('Sample', 'Pre-Filter UMAP')
+data <- cbind(sample_list |> gsub(pattern='/', replacement=' - '), lapply(sample_list, function(x) paste0(file.path(maindir, x, plt5) %>% pander::pandoc.image.return(), '{height=512px, width=576px}')), lapply(sample_list, function(x) paste0(file.path(maindir, x, plt_pre_feature_rna) %>% pander::pandoc.image.return(), '{height=512px, width=576px}')), lapply(sample_list, function(x) paste0(file.path(maindir, x, plt_pre_count_rna) %>% pander::pandoc.image.return(), '{height=512px, width=576px}')), lapply(sample_list, function(x) paste0(file.path(maindir, x, plt_pre_mito) %>% pander::pandoc.image.return(), '{height=512px, width=576px}')), lapply(sample_list, function(x) paste0(file.path(maindir, x, plt_pre_rpl) %>% pander::pandoc.image.return(), '{height=512px, width=576px}')), lapply(sample_list, function(x) paste0(file.path(maindir, x, plt_pre_rps) %>% pander::pandoc.image.return(), '{height=512px, width=576px}'))) %>% as.data.frame()
+colnames(data) <- c('Sample', 'Pre-Filter UMAP', 'Pre-Filter Number of Molecules', 'Pre-Filter Number of Genes', 'Pre-Filter Percent Mito', 'Pre-Filter Percent Ribosomal Protein (Large)', 'Pre-Filter Percent Ribosomal Protein (Small)')
 data %>% kable(format='html') %>%
         column_spec(column=length(data) %>% seq(), border_left = "1px solid gray", border_right = "1px solid gray") %>%
         row_spec(row=dim(data)[[1]] %>% seq(), hline_after=T, align='c', extra_css = "border-bottom: 1px solid gray") %>%
@@ -108,6 +119,8 @@ data %>% kable(format='html') %>%
 data <- read.csv(params$cellfilter)
 colnames(data) <- gsub('_low', ' - Lower', colnames(data))
 colnames(data) <- gsub('_high', ' - Upper', colnames(data))
+colnames(data) <- gsub('initialCellCount', 'Initial Cell Count', colnames(data))
+colnames(data) <- gsub('finalCellCount', 'Final Cell Count', colnames(data))
 colnames(data) <- gsub('numCellsRemove', 'Number of Cells Removed', colnames(data))
 colnames(data) <- gsub('pctCellsRemove', 'Percentage of Cells Removed', colnames(data))
 kable(data, format='html') %>%
@@ -171,12 +184,18 @@ try(expr={
 }, silent=TRUE)
 
 #Create data table while replacing the 0.8 from the original plt9 file name and replacing it with resolution from resolution list
-data <- cbind(sample_list |> gsub(pattern='/', replacement=' - '), lapply(sample_list, function(x) paste0(file.path(maindir, x, plt9 %>% gsub(pattern='0.8', replacement=resolutions[x])) %>% pander::pandoc.image.return(), '{height=512px, width=576px}'))) %>% as.data.frame()
-colnames(data) <- c('Sample', 'Seurat Clusters')
+data <- cbind(sample_list |> gsub(pattern='/', replacement=' - '), lapply(sample_list, function(x) paste0(file.path(maindir, x, plt9 %>% gsub(pattern='0.8', replacement=resolutions[x])) %>% pander::pandoc.image.return(), '{height=512px, width=576px}')), lapply(sample_list, function(x) paste0(file.path(maindir, x, plt_post_feature_rna) %>% pander::pandoc.image.return(), '{height=512px, width=576px}')), lapply(sample_list, function(x) paste0(file.path(maindir, x, plt_post_count_rna) %>% pander::pandoc.image.return(), '{height=512px, width=576px}')), lapply(sample_list, function(x) paste0(file.path(maindir, x, plt_post_mito) %>% pander::pandoc.image.return(), '{height=512px, width=576px}')), lapply(sample_list, function(x) paste0(file.path(maindir, x, plt_post_rpl) %>% pander::pandoc.image.return(), '{height=512px, width=576px}')), lapply(sample_list, function(x) paste0(file.path(maindir, x, plt_post_rps) %>% pander::pandoc.image.return(), '{height=512px, width=576px}'))) %>% as.data.frame()
+colnames(data) <- c('Sample', 'Seurat Clusters', 'Post-Filter Number of Molecules', 'Post-Filter Number of Genes', 'Post-Filter Percent Mito', 'Post-Filter Percent Ribosomal Protein (Large)', 'Post-Filter Percent Ribosomal Protein (Small)')
 data %>% kable(format='html') %>%
         column_spec(column=length(data) %>% seq(), border_left = "1px solid gray", border_right = "1px solid gray") %>%
         row_spec(row=dim(data)[[1]] %>% seq(), hline_after=T, align='c', extra_css = "border-bottom: 1px solid gray") %>%
         row_spec(row=0,bold=TRUE, align='c', extra_css = "border: 1px solid gray")
 
+```
+
+```{r  echo=F ,results='asis', eval=length(setdiff(params$skipped, '')) > 0}
+cat("## Skipped Samples\n\n")
+cat("The following are a list of samples and tags that did not return enough cells after Cell Ranger to proceed with downstream analysis. Please check to ensure that the this list does not contain any samples where cells are expected.\n\n")
+cat(sprintf("* %s\n\n", paste(str_sort(params$skipped, numeric=T), collapse="\n* ")))
 ```
 
