--- a/workflow/scripts/seuratSampleQCSummaryReport.Rmd
+++ b/workflow/scripts/seuratSampleQCSummaryReport.Rmd
@@ -41,8 +41,18 @@ plt2 <- "PostFilter_Gene_Plot.png"
 plt3 <- "PreFilter_VlnPlot_RNA.png"
 plt4 <- "PostFilter_VlnPlot_RNA.png"
 plt5 <- "PreFilter_UMAP_RNA_Filter.png"
+plt5.f <- "PreFilter_UMAP_nFeature_RNA.png"
+plt5.c <- "PreFilter_UMAP_nCount_RNA.png"
+plt6 <- "PreFilter_UMAP_percent.mito.png"
+plt7 <- "PreFilter_UMAP_percent.rpl.png"
+plt8 <- "PreFilter_UMAP_percent.rps.png"
 #plt8 <- "TopVariableGenes.png"
 plt9 <- "UMAP_RNA_res.0.8.png"
+plt10 <- "PostFilter_UMAP_nFeature_RNA.png"
+plt11 <- "PostFilter_UMAP_nCount_RNA.png"
+plt12 <- "PostFilter_UMAP_percent.mito.png"
+plt13 <- "PostFilter_UMAP_percent.rpl.png"
+plt14 <- "PostFilter_UMAP_percent.rps.png"
 sil_wildcard <- "SilhouetteResult_res*.csv"
 
 sample_list <- params$samples
@@ -69,8 +79,8 @@ data %>% kable(format='html') %>%
 ## Pre-Filter UMAP
 
 ```{r  echo=F ,results='asis'}
-data <- cbind(sample_list, lapply(sample_list, function(x) paste0(file.path(maindir, x, plt5) %>% pander::pandoc.image.return(), '{height=512px, width=576px}'))) %>% as.data.frame()
-colnames(data) <- c('Sample', 'Pre-Filter UMAP')
+data <- cbind(sample_list, lapply(sample_list, function(x) paste0(file.path(maindir, x, plt5) %>% pander::pandoc.image.return(), '{height=512px, width=576px}')), lapply(sample_list, function(x) paste0(file.path(maindir, x, plt5.f) %>% pander::pandoc.image.return(), '{height=512px, width=576px}')), lapply(sample_list, function(x) paste0(file.path(maindir, x, plt5.c) %>% pander::pandoc.image.return(), '{height=512px, width=576px}')), lapply(sample_list, function(x) paste0(file.path(maindir, x, plt6) %>% pander::pandoc.image.return(), '{height=512px, width=576px}')), lapply(sample_list, function(x) paste0(file.path(maindir, x, plt7) %>% pander::pandoc.image.return(), '{height=512px, width=576px}')), lapply(sample_list, function(x) paste0(file.path(maindir, x, plt8) %>% pander::pandoc.image.return(), '{height=512px, width=576px}'))) %>% as.data.frame()
+colnames(data) <- c('Sample', 'Pre-Filter UMAP', 'Pre-Filter Number of Molecules', 'Pre-Filter Number of Genes', 'Pre-Filter Percent Mito', 'Pre-Filter Percent Ribosomal Protein (Large)', 'Pre-Filter Percent Ribosomal Protein (Small)')
 data %>% kable(format='html') %>%
         column_spec(column=length(data) %>% seq(), border_left = "1px solid gray", border_right = "1px solid gray") %>%
         row_spec(row=dim(data)[[1]] %>% seq(), hline_after=T, align='c', extra_css = "border-bottom: 1px solid gray") %>%
@@ -84,6 +94,8 @@ data %>% kable(format='html') %>%
 data <- read.csv(params$cellfilter)
 colnames(data) <- gsub('_low', ' - Lower', colnames(data))
 colnames(data) <- gsub('_high', ' - Upper', colnames(data))
+colnames(data) <- gsub('initialCellCount', 'Initial Cell Count', colnames(data))
+colnames(data) <- gsub('finalCellCount', 'Final Cell Count', colnames(data))
 colnames(data) <- gsub('numCellsRemove', 'Number of Cells Removed', colnames(data))
 colnames(data) <- gsub('pctCellsRemove', 'Percentage of Cells Removed', colnames(data))
 kable(data, format='html') %>%
@@ -126,8 +138,8 @@ try(expr={
 }, silent=TRUE)
 
 #Create data table while replacing the 0.8 from the original plt9 file name and replacing it with resolution from resolution list
-data <- cbind(sample_list, lapply(sample_list, function(x) paste0(file.path(maindir, x, plt9 %>% gsub(pattern='0.8', replacement=resolutions[x])) %>% pander::pandoc.image.return(), '{height=512px, width=576px}'))) %>% as.data.frame()
-colnames(data) <- c('Sample', 'Seurat Clusters')
+data <- cbind(sample_list, lapply(sample_list, function(x) paste0(file.path(maindir, x, plt9 %>% gsub(pattern='0.8', replacement=resolutions[x])) %>% pander::pandoc.image.return(), '{height=512px, width=576px}')), lapply(sample_list, function(x) paste0(file.path(maindir, x, plt10) %>% pander::pandoc.image.return(), '{height=512px, width=576px}')), lapply(sample_list, function(x) paste0(file.path(maindir, x, plt11) %>% pander::pandoc.image.return(), '{height=512px, width=576px}')), lapply(sample_list, function(x) paste0(file.path(maindir, x, plt12) %>% pander::pandoc.image.return(), '{height=512px, width=576px}')), lapply(sample_list, function(x) paste0(file.path(maindir, x, plt13) %>% pander::pandoc.image.return(), '{height=512px, width=576px}')), lapply(sample_list, function(x) paste0(file.path(maindir, x, plt14) %>% pander::pandoc.image.return(), '{height=512px, width=576px}'))) %>% as.data.frame()
+colnames(data) <- c('Sample', 'Seurat Clusters', 'Post-Filter Number of Molecules', 'Post-Filter Number of Genes', 'Post-Filter Percent Mito', 'Post-Filter Percent Ribosomal Protein (Large)', 'Post-Filter Percent Ribosomal Protein (Small)')
 data %>% kable(format='html') %>%
         column_spec(column=length(data) %>% seq(), border_left = "1px solid gray", border_right = "1px solid gray") %>%
         row_spec(row=dim(data)[[1]] %>% seq(), hline_after=T, align='c', extra_css = "border-bottom: 1px solid gray") %>%
